--- a/content/efectividad/efe1.mdx
+++ b/content/efectividad/efe1.mdx
@@ -2,6 +2,7 @@
 title: "efe1"
 publishedAt: "2023-01-02"
 summary: "Celebrating the work of my teams at Vercel."
+featured: true
 ---
 
 My biggest accomplishment of 2022 was not my own, but the collective work of folks on my teams at Vercel. They've chosen to join me on this ambitious journey to make the web faster. I'd like to share the internal Slack message I wrote to celebrate their amazing work:
