🖼 add tratamientos page

--- a/content/efectividad/pie-diabetico.mdx
+++ b/content/efectividad/pie-diabetico.mdx
@@ -2,7 +2,7 @@
 title: 'Cómo prevenir las amputaciones en pacientes con pie diabético'
 publishedAt: '2023-04-02'
 summary: 'Estudios recientes han demostrado que la la terapia de oxígeno hiperbárico (TOHB) puede disminuir el riesgo de amputaciones mayores en pacientes con pie diabético isquémico.'
-image: '/images/pie-diabetico/og.jpg'
+image: '/blog/pie-diabetico/og.jpg'
 featured: true
 ---
 
@@ -23,6 +23,10 @@ Estos efectos se traducen en una mayor probabilidad de curación de las úlceras
 Para beneficiarse de la TOHB, los pacientes deben cumplir ciertos requisitos, como tener una úlcera que no mejora con el tratamiento convencional, tener una buena capacidad pulmonar y no tener contraindicaciones médicas. Además, deben someterse a varias sesiones (entre 20 y 40) de una hora cada una, en las que se les coloca dentro de la cámara hiperbárica.
 
 La TOHB es un tratamiento seguro y eficaz para los pacientes con pie diabético, siempre que se realice bajo supervisión médica y siguiendo las indicaciones del especialista.
+
+En Hiperbárica del Sur Perú, contamos con un equipo profesional y experimentado que le brindará una atención personalizada y segura. Nuestros tratamientos son indoloros, no invasivos y científicamente probados para tratar una serie de condiciones temporales y crónicas que la medicina tradicional puede no abordar.
+
+Si desea saber más sobre nuestros servicios o solicitar una cita, no dude en contactarnos. Estaremos encantados de atenderle y ayudarle a mejorar su salud y bienestar.
 
 ---
 
