fix minor blogpost issues and refactor capitalize fn

--- a/content/efectividad/pie-diabetico.mdx
+++ b/content/efectividad/pie-diabetico.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Cómo prevenir las amputaciones en pacientes con pie diabético'
 publishedAt: '2023-04-02'
-summary: 'Estudios recientes han demostrado que la la terapia de oxígeno hiperbárico (TOHB) puede disminuir el riesgo de amputaciones mayores en pacientes con pie diabético isquémico.'
+summary: 'Estudios recientes han demostrado que la terapia de oxígeno hiperbárico (TOHB) puede disminuir el riesgo de amputaciones mayores en pacientes con pie diabético isquémico.'
 image: '/blog/pie-diabetico/og.jpg'
 featured: true
 ---
