--- a/content/tratamientos/diabetes-mellitus.mdx
+++ b/content/tratamientos/diabetes-mellitus.mdx
@@ -1,6 +1,6 @@
 ---
 
-title: ¿Cómo la Terapia de Oxígeno Hiperbárico Mejora el Control de la Diabetes Mellitus?
+title: ¿Cómo la Terapia de Oxígeno Hiperbárico mejora el control de la Diabetes Mellitus?
 publishedAt: 2023-05-08
 summary: La terapia de oxígeno hiperbárico puede ayudar a mejorar el control de la glucosa en sangre y reducir las complicaciones vasculares en las personas con diabetes mellitus. Descubre cómo funciona y qué beneficios tiene.
 image: '/blog/diabetes/og.jpg'
