--- a/content/tratamientos/osteoporosis.mdx
+++ b/content/tratamientos/osteoporosis.mdx
@@ -2,7 +2,7 @@
 
 title: Cómo la oxigenoterapia hiperbárica puede ayudar a tratar la osteoporosis
 publishedAt: 2023-05-08
-summary: la terapia de oxígeno hiperbárico (TOHB) es un tratamiento que puede mejorar la salud ósea y prevenir las fracturas en las personas mayores, con o sin obesidad. En este artículo te explicamos cómo funciona y qué beneficios tiene.
+summary: La terapia de oxígeno hiperbárico (TOHB) es un tratamiento que puede mejorar la salud ósea y prevenir las fracturas en las personas mayores, con o sin obesidad. En este artículo te explicamos cómo funciona y qué beneficios tiene.
 image: "/blog/osteoporosis/og.jpg"
 
 ---
