refactor "pie diabetico" post sources

--- a/content/efectividad/pie-diabetico.mdx
+++ b/content/efectividad/pie-diabetico.mdx
@@ -1,24 +1,28 @@
 ---
-title: 'Cómo prevenir las amputaciones en pacientes con pie diabético'
+title: 'Cómo mejorar la cicatrización de úlceras en pacientes con pie diabético'
 publishedAt: '2023-04-02'
-summary: 'Estudios recientes han demostrado que la terapia de oxígeno hiperbárico (TOHB) puede disminuir el riesgo de amputaciones mayores en pacientes con pie diabético isquémico.'
+summary: 'Estudios recientes han demostrado que la terapia de oxígeno hiperbárico (TOHB) puede mejorar la cicatrización de las úlceras en pacientes con pie diabético isquémico.'
 image: '/blog/pie-diabetico/og.jpg'
 featured: true
 ---
 
 El pie diabético es una complicación grave de la diabetes que afecta a los nervios y los vasos sanguíneos de los pies. Esto provoca que las heridas se curen más lentamente y que se puedan infectar o necrosar. En algunos casos, la única solución es la amputación de una parte del pie o de la pierna.
 
-Sin embargo, existe una terapia que puede ayudar a prevenir las amputaciones y mejorar la cicatrización de las úlceras: la terapia de oxígeno hiperbárico (TOHB). Se trata de un tratamiento que consiste en respirar oxígeno puro a una presión mayor que la atmosférica, dentro de una cámara especial. Al hacerlo, se aumenta la cantidad de oxígeno que llega a los tejidos y se estimula la formación de nuevos vasos sanguíneos.
+Sin embargo, existe una terapia que puede ayudar a mejorar la cicatrización de las úlceras: la terapia de oxígeno hiperbárico (TOHB). Se trata de un tratamiento que consiste en respirar oxígeno puro a una presión mayor que la atmosférica, dentro de una cámara especial. Al hacerlo, se aumenta la cantidad de oxígeno que llega a los tejidos y se estimula la formación de nuevos vasos sanguíneos.
 
 La TOHB tiene varios efectos beneficiosos para los pacientes con pie diabético:
 
-- Ayuda a mejorar el nivel de oxígeno en los tejidos para acelerar el proceso de curación de úlceras y prevenir amputaciones.
+- Ayuda a mejorar el nivel de oxígeno en los tejidos para acelerar el proceso de curación de úlceras.
+
 - Aumento del crecimiento de nuevos vasos sanguíneos
+
 - Mejora de la formación de colágeno, una proteína que ayuda a sostener la piel
+
 - Mejora de la actividad de los glóbulos blancos, que ayudan a combatir las infecciones
+
 - Reducción de la hinchazón
 
-Estos efectos se traducen en una mayor probabilidad de curación de las úlceras y una menor necesidad de amputaciones. De hecho, un estudio reciente publicado en la revista Scientific Reports encontró que los pacientes con pie diabético isquémico que recibieron TOHB tuvieron un 40% menos de riesgo de amputaciones mayores[^1], que los que no recibieron esta terapia.
+Un estudio reciente de Chen et al. encontró que más de 10 sesiones de TOHB aumentaron la tasa de curación de heridas en un 78.3% en pacientes diabéticos[^1].
 
 Para beneficiarse de la TOHB, los pacientes deben cumplir ciertos requisitos, como tener una úlcera que no mejora con el tratamiento convencional, tener una buena capacidad pulmonar y no tener contraindicaciones médicas. Además, deben someterse a varias sesiones (entre 20 y 40) de una hora cada una, en las que se les coloca dentro de la cámara hiperbárica.
 
@@ -30,4 +34,4 @@ Si desea saber más sobre nuestros servicios o solicitar una cita, no dude en co
 
 ---
 
-[^1]: [Sharma, R., Sharma, S. K., Mudgal, S. K., Jelly, P., & Thakur, K. (2021). Efficacy of hyperbaric oxygen therapy for diabetic foot ulcer, a systematic review and meta-analysis of controlled clinical trials. Scientific Reports, 11(1), 1-12.](https://doi.org/10.1038/s41598-021-81886-1)
+[^1]: [Treatment of diabetic foot infection with hyperbaric oxygen therapy](https://www.sciencedirect.com/science/article/abs/pii/S1268773109000757)
