refactor diabetes post

--- a/content/efectividad/pie-diabetico.mdx
+++ b/content/efectividad/pie-diabetico.mdx
@@ -4,29 +4,42 @@ publishedAt: '2023-04-02'
 summary: 'Estudios recientes han demostrado que la terapia de oxígeno hiperbárico (TOHB) puede mejorar la cicatrización de las úlceras en pacientes con pie diabético isquémico.'
 image: '/blog/pie-diabetico/og.jpg'
 featured: true
+
 ---
 
-El pie diabético es una complicación grave de la diabetes que afecta a los nervios y los vasos sanguíneos de los pies. Esto provoca que las heridas se curen más lentamente y que se puedan infectar o necrosar. En algunos casos, la única solución es la amputación de una parte del pie o de la pierna.
+Las úlceras del pie diabético son heridas que se producen en los pies de las personas con diabetes y que tienen dificultades para cicatrizar. Estas úlceras pueden causar dolor, infección y, en los casos más graves, amputación del miembro afectado.
 
 Sin embargo, existe una terapia que puede ayudar a mejorar la cicatrización de las úlceras: la terapia de oxígeno hiperbárico (TOHB). Se trata de un tratamiento que consiste en respirar oxígeno puro a una presión mayor que la atmosférica, dentro de una cámara especial. Al hacerlo, se aumenta la cantidad de oxígeno que llega a los tejidos y se estimula la formación de nuevos vasos sanguíneos.
 
-La TOHB tiene varios efectos beneficiosos para los pacientes con pie diabético:
+## ¿Qué es la terapia con oxígeno hiperbárico?
 
-- Ayuda a mejorar el nivel de oxígeno en los tejidos para acelerar el proceso de curación de úlceras.
+La terapia con oxígeno hiperbárico consiste en respirar oxígeno puro al 100% en una cámara presurizada. Al hacerlo, se consigue que el oxígeno llegue a los tejidos en mayor cantidad y profundidad que lo que se logra respirando el aire normal.
 
-- Aumento del crecimiento de nuevos vasos sanguíneos
+Esto tiene varios beneficios para la salud, especialmente para las heridas crónicas como las úlceras del pie diabético. Algunos de estos beneficios son:
 
-- Mejora de la formación de colágeno, una proteína que ayuda a sostener la piel
+- Aumenta la oxigenación de los tejidos, lo que favorece la regeneración celular y la formación de nuevos vasos sanguíneos.
 
-- Mejora de la actividad de los glóbulos blancos, que ayudan a combatir las infecciones
+- Reduce la inflamación y el edema, lo que alivia el dolor y mejora la movilidad.
 
-- Reducción de la hinchazón
+- Tiene un efecto antibacteriano, ya que el oxígeno inhibe el crecimiento de algunos microorganismos que causan infección.
 
-Un estudio reciente de Chen et al. encontró que más de 10 sesiones de TOHB aumentaron la tasa de curación de heridas en un 78.3% en pacientes diabéticos[^1].
+- Potencia el efecto de los antibióticos, ya que el oxígeno facilita su penetración en los tejidos.
 
-Para beneficiarse de la TOHB, los pacientes deben cumplir ciertos requisitos, como tener una úlcera que no mejora con el tratamiento convencional, tener una buena capacidad pulmonar y no tener contraindicaciones médicas. Además, deben someterse a varias sesiones (entre 20 y 40) de una hora cada una, en las que se les coloca dentro de la cámara hiperbárica.
+## ¿Qué evidencia científica hay sobre la terapia con oxígeno hiperbárico para las úlceras del pie diabético?
 
-La TOHB es un tratamiento seguro y eficaz para los pacientes con pie diabético, siempre que se realice bajo supervisión médica y siguiendo las indicaciones del especialista.
+Existen varios estudios que han evaluado los beneficios de la TOHB para las úlceras del pie diabético. Uno de ellos encontró que la TOHB tiene un efecto positivo en la cicatrización de las úlceras infectadas, y que el efecto depende de la cantidad de sesiones que se reciban. En los pacientes que recibieron más de 10 sesiones de TOHB, el 78.3% conservó sus pies y logró una buena cicatrización, mientras que en los que recibieron menos de 10 sesiones, solo el 33.3% conservó sus pies.[^1]
+
+## ¿Qué debería esperar si recibe terapia con oxígeno hiperbárico para su úlcera?
+
+La TOHB es un tratamiento médico que requiere una indicación y una supervisión profesional. No es un tratamiento milagroso ni sustituye a otros cuidados que debe tener con su úlcera, como limpiarla, protegerla y cambiar los vendajes regularmente.
+
+La TOHB suele formar parte de un plan integral de cuidado que puede incluir cirugía, antibióticos u otros tratamientos, según el caso. El número de sesiones varía según la gravedad y el tamaño de la úlcera, pero generalmente se programan una vez al día durante varias semanas.
+
+Cada sesión dura entre 60 y 120 minutos, y se realiza en una cámara cerrada donde se respira oxígeno puro. Durante la sesión, es posible que sienta presión en los oídos o un poco de calor o frío, pero son sensaciones normales y pasajeras. Puede relajarse, escuchar música o ver una película mientras recibe el tratamiento.
+
+Después de cada sesión, es importante hidratarse bien y seguir las indicaciones de su médico. Es posible que note algunos cambios en su úlcera, como un aumento del tamaño o del color, pero esto no significa que el tratamiento no esté funcionando. Al contrario, son signos de que el oxígeno está estimulando la regeneración de los tejidos.
+
+La TOHB es un tratamiento seguro y efectivo para el envenenamiento por CO, aunque puede tener algunos efectos secundarios leves y transitorios, como dolor de oídos, mareos o visión borrosa. Estos efectos se pueden prevenir o aliviar siguiendo las [indicaciones](/blog/recomendaciones) del personal médico antes y después de cada sesión.
 
 En Hiperbárica del Sur Perú, contamos con un equipo profesional y experimentado que le brindará una atención personalizada y segura. Nuestros tratamientos son indoloros, no invasivos y científicamente probados para tratar una serie de condiciones temporales y crónicas que la medicina tradicional puede no abordar.
 
