add new blogposts

--- a/content/tratamientos/anemia.mdx
+++ b/content/tratamientos/anemia.mdx
@@ -1,6 +1,6 @@
 ---
 
-title: Mejorando la Deuda de Oxígeno: La TOHB y la Anemia Severa
+title: 'Mejorando la Deuda de Oxígeno: La TOHB y la Anemia Severa'
 
 publishedAt: 2023-05-12
 
